Added Post method to material
